# BE_NiceToMeetYou

./: Dockerfile  README.md  database.db  pyproject.toml
app/: main.py
app/database/: db_connection.py
app/entities/: news.py
app/models/: news.py  pagination.py
app/repositories/: news_mapper.py  news_repository.py
app/routers/: news_router.py  web_router.py
app/services/: news_service.py
crawler/: nba_news_crawler.py
deploy/: deployment.yaml  service.yaml
templates/: news_detail.html  news_list.html
